fixing a bug in state and adding a error note div. took 10 min. had only worked on this 1h 40m.

--- a/src/components/TodoWidget/TodoWidget.css
+++ b/src/components/TodoWidget/TodoWidget.css
@@ -56,3 +56,16 @@ li {
 .invalid {
   background-color: rgba(255,0,0,0.2);
 }
+
+.error {
+  align-self: center;
+  text-align: left;
+  width: 28rem;
+  height: 1rem;
+  font-size: 0.8rem;
+  font-weight: bold;
+  margin: auto;
+  padding: 0;
+  // background-color: #ffffff;
+  color: #cc0000;
+}
